--- a/CARW/templates/main/Peditables.html
+++ b/CARW/templates/main/Peditables.html
@@ -29,9 +29,10 @@
     </form>
 </div>
 <div class="sombreado" id="container3">
-    <ul id="cambio" class="list-group2">
+    <ul id="cambio" class="list-group">
         <li class="list-group-item" onclick="ver_procedimientos()">Mostrar Procedimientos</li>
     </ul>
 </div>
+
 <script src="{{url_for('static', filename='js/Peditables.js')}} "></script>
 {% endblock %}
