trabajo muy duro como un esclavo

--- a/CARW/templates/main/Ajustes.html
+++ b/CARW/templates/main/Ajustes.html
@@ -39,7 +39,7 @@
         <button type="button" class="btn btn-primary" onclick="guardar_vehiculos()">Registrar</button>
         <button type="button" class="btn btn-danger" onclick="limpiartodo()">Limpiar</button>
     </div>
-    <div class="sombreado" id="ajusuarios">
+    <div class="sombreado" id="ajusuarios" style="visibility: hidden;">
         <label for="Rusuario">Usuario:</label>
         <input id="Rusuario" type="text" placeholder="" style="position: relative; left: 75px;">
         <br></br>
@@ -73,7 +73,7 @@
         </select>
         <br></br>
         <button type="button" class="btn btn-primary" onclick="guardar_usuarios()">Registrar</button>
-        <button type="button" class="btn btn-danger" onclick="test()">Limpiar</button>
+        <button type="button" class="btn btn-danger" onclick="limpiartodo2()">Limpiar</button>
     </div>
     <div class="sombreado" id="ajeliminar" style="visibility: hidden;">
         <label for="Dusuario">Usuario:</label>
