--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -33,10 +33,13 @@
                     <a onclick="goturnos()" style="color:#FFFFFF">Turnos</a>
                 </li>
                 <li>
-                    <a onclick="gobalances()" style="color:#FFFFFF" gobalances()>Balances</a>
+                    <a onclick="gobalances()" style="color:#FFFFFF">Balances</a>
                 </li>
                 <li>
                     <a onclick="goajustes()" style="color:#FFFFFF">Ajustes</a>
+                </li>
+                <li>
+                    <a onclick="back_to_login()" style="color:#FFFFFF">Cerrar Sesion</a>
                 </li>
             </ul>
         </div>
