--- a/CARW/templates/main/Pagos.html
+++ b/CARW/templates/main/Pagos.html
@@ -1,20 +1,20 @@
 {% extends "./layout.html" %} {% block body %}
-<div id="alerta" class="alerta-exito oculto">
+<div id="alerta" class="alerta-campo-vacioPG oculto">
     Cedula No Registrada!
 </div>
-<div id="alerta2" class="alerta-exito oculto">
+<div id="alerta2" class="alerta-campo-vacioPG oculto">
     Coloque Un Usuario!
 </div>
-<div id="alerta3" class="alerta-exito oculto">
+<div id="alerta3" class="alerta-campo-vacioPG oculto">
     No puedes pagar menos del valor!
 </div>
-<div id="alerta4" class="alerta-exito oculto">
+<div id="alerta4" class="alerta-exitoPG oculto">
     Pago Realizado!
 </div>
-<div id="alerta5" class="alerta-exito oculto">
+<div id="alerta5" class="alerta-campo-vacioPG oculto">
     Pago No registrado o Fallido!
 </div>
-<div id="alerta6" class="alerta-exito oculto">
+<div id="alerta6" class="alerta-exitoPG oculto">
     Tuno Generado Con Exito!
 </div>
 <div id="pagofisico" class="contenedordepagos oculto">
