--- a/CARW/static/css/master.css
+++ b/CARW/static/css/master.css
@@ -11,10 +11,10 @@
 
 #sidebar {
     position: fixed;
-    width: 200px;
+    width: 15%;
     height: 100%;
     background: #151719;
-    left: -200px;
+    left: -15%;
     transition: all 500ms linear;
     display: flex;
     flex-direction: column;
@@ -159,16 +159,16 @@ body {
     position: absolute;
     right: 25%;
     top: -5%;
-    width: 700px;
-    height: 300px;
+    width: 46%;
+    height: 30%;
 }
 
 .poster {
     position: absolute;
     right: 25%;
     top: 20%;
-    width: 700px;
-    height: 650px;
+    width: 46%;
+    height: 80%;
 }
 
 
@@ -260,8 +260,8 @@ nav {
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
-    position: absolute;
-    right: 0;
+    position: fixed;
+    right: -5%;
     top: 10%;
 }
 
@@ -269,7 +269,6 @@ nav {
 /* paquetes editables */
 
 .container2 {
-    width: 35%;
     margin: 0 auto;
     padding: 20px;
     border: none;
@@ -279,35 +278,40 @@ nav {
     top: 10%;
     background-color: rgba(255, 255, 255, 0.797);
     border-radius: 2%;
-    max-height: 700px;
-    height: 700px;
-    max-width: 880px;
-    width: 880px;
+    max-height: 85%;
+    height: 85%;
+    max-width: 65%;
+    width: 65%;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 #container3 {
-    width: 30%;
-    margin: 0 auto;
+    flex: 1;
+    margin-left: 48%;
     padding: 20px;
     border: none;
     box-sizing: border-box;
     position: absolute;
-    right: 9.5%;
-    top: 31%;
     border-radius: 2%;
     overflow-y: auto;
-    max-height: 450px;
-    height: 450px;
-    max-width: 395px;
-    width: 395px;
+    max-height: 30vw;
+    height: 30vw;
+    max-width: 30vw;
+    width: 30vw;
 }
 
 .container4 {
+    flex: 1;
     overflow-y: auto;
-    max-height: 450px;
-    height: 450px;
-    max-width: 450px;
-    width: 450px;
+    max-height: 30vw;
+    height: 30vw;
+    max-width: 30vw;
+    width: 30vw;
     background-color: white;
     border-radius: 2%;
 }
@@ -319,8 +323,9 @@ nav {
     margin-bottom: 10px;
     border-radius: 5px;
     position: absolute;
-    right: 75%;
+    right: 60%;
     top: 12%;
+    z-index: 2;
 }
 
 .alerta-campo-vacio {
@@ -330,8 +335,9 @@ nav {
     margin-bottom: 10px;
     border-radius: 5px;
     position: absolute;
-    right: 75%;
+    right: 54%;
     top: 12%;
+    z-index: 2;
 }
 
 .oculto {
@@ -343,27 +349,25 @@ nav {
 
 .container5 {
     overflow-y: auto;
-    max-height: 290px;
-    height: 290px;
+    max-height: 20vw;
+    height: 20vw;
     background-color: white;
     border-radius: 2%;
 }
 
 #containerPG {
-    width: 30%;
-    margin: 0 auto;
     padding: 20px;
     border: none;
     box-sizing: border-box;
     position: absolute;
-    right: 9.5%;
-    top: 22%;
+    right: 15.5%;
+    top: 24%;
     border-radius: 2%;
     overflow-y: auto;
-    max-height: 450px;
-    height: 450px;
-    max-width: 395px;
-    width: 395px;
+    max-height: 55%;
+    height: 55%;
+    max-width: 30%;
+    width: 30%;
 }
 
 .caja-pagos {
@@ -373,33 +377,58 @@ nav {
     border: none;
     box-sizing: border-box;
     position: absolute;
-    right: 9%;
+    right: 15%;
     top: 5%;
     background-color: rgba(255, 255, 255, 0.797);
     border-radius: 2%;
-    max-height: 650px;
-    height: 650px;
-    max-width: 880px;
-    width: 880px;
+    max-height: 75%;
+    height: 75%;
+    max-width: 55%;
+    width: 55%;
 }
 
 .payuL {
     position: absolute;
     right: 0%;
     top: 0%;
-    height: 700px;
+    height: 100%;
+    width: 10%;
 }
 
 .contenedordepagos {
     background-color: black;
     color: white;
     padding: 10px;
+    height: 35%;
+    width: 23%;
+    position: absolute;
+    right: 35%;
+    top: 30%;
+    z-index: 3;
+}
+
+.alerta-exitoPG {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
     position: absolute;
-    right: 40%;
-    top: 30%;
-    z-index: 3;
+    right: 58%;
+    top: 10%;
+    z-index: 2;
+}
+
+.alerta-campo-vacioPG {
+    background-color: rgba(255, 0, 0, 0.83);
+    color: white;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    position: absolute;
+    right: 58%;
+    top: 10%;
+    z-index: 2;
 }
 
 
@@ -407,16 +436,15 @@ nav {
 
 #miTabla {
     background-color: white;
-    display: flex;
     flex-direction: column;
     border-collapse: collapse;
     position: absolute;
     right: 15%;
     top: 2%;
-    max-height: 200px;
-    height: 200px;
-    max-width: 880px;
-    width: 880px;
+    max-height: 30%;
+    height: 30%;
+    max-width: 60%;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
     overflow: auto;
@@ -445,10 +473,10 @@ nav {
     position: absolute;
     right: 15%;
     top: 35%;
-    max-height: 400px;
-    height: 400px;
-    max-width: 880px;
-    width: 880px;
+    max-height: 60%;
+    height: 60%;
+    max-width: 60%;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
     overflow: auto;
@@ -508,10 +536,10 @@ nav {
     position: absolute;
     right: 1%;
     top: 2%;
-    max-height: 750px;
-    height: 750px;
-    max-width: 880px;
-    width: 880px;
+    max-height: 90%;
+    height: 90%;
+    max-width: 60%;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
     overflow: auto;
@@ -587,10 +615,10 @@ nav {
     position: absolute;
     right: 1%;
     top: 2%;
-    max-height: 750px;
-    height: 750px;
-    max-width: 880px;
-    width: 880px;
+    max-height: 90%;
+    height: 90%;
+    max-width: 60%;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
     overflow: auto;
@@ -610,44 +638,47 @@ nav {
     top: 2%;
     background-color: rgba(255, 255, 255, 0.797);
     border-radius: 2%;
-    max-height: 600px;
-    height: 600px;
-    max-width: 880px;
-    width: 880px;
+    max-height: 90%;
+    height: 90%;
+    max-width: 60%;
+    width: 60%;
 }
 
 #ajustes-botones {
-    height: 120px;
-    width: 100px;
+    height: 8vw;
+    width: 8vw;
+    text-align: center;
 }
 
 #ajustes-botones2 {
-    height: 180px;
-    width: 180px;
+    text-align: center;
+    height: 13vw;
+    width: 13vw;
     position: absolute;
-    right: 63%;
+    right: 60%;
     top: 3.5%;
 }
 
 #ajustes-botones3 {
-    height: 180px;
-    width: 180px;
+    text-align: center;
+    height: 13vw;
+    width: 13vw;
     position: absolute;
-    right: 63%;
+    right: 60%;
     top: 3.5%;
 }
 
 #ajvehiculos {
-    height: 560px;
-    width: 525px;
+    height: 25vw;
+    width: 33vw;
     position: absolute;
     right: 1%;
     top: 3.5%;
 }
 
 #ajusuarios {
-    height: 560px;
-    width: 525px;
+    height: 35vw;
+    width: 33vw;
     position: absolute;
     right: 1%;
     top: 3.5%;
@@ -662,24 +693,24 @@ nav {
 }
 
 #ajeliminar {
-    height: 560px;
-    width: 525px;
+    height: 25vw;
+    width: 33vw;
     position: absolute;
     right: 1%;
     top: 3.5%;
 }
 
 #ajeliminarPQ {
-    height: 560px;
-    width: 525px;
+    height: 25vw;
+    width: 33vw;
     position: absolute;
     right: 1%;
     top: 3.5%;
 }
 
 #ajregistrarPQ {
-    height: 560px;
-    width: 525px;
+    height: 25vw;
+    width: 33vw;
     position: absolute;
     right: 1%;
     top: 3.5%;
