sesion funciona en un 20%

--- a/CARW/templates/layout.html
+++ b/CARW/templates/layout.html
@@ -39,7 +39,7 @@
                     <a onclick="goajustes()" style="color:#FFFFFF">Ajustes</a>
                 </li>
                 <li>
-                    <a onclick="back_to_login()" style="color:#FFFFFF">Cerrar Sesion</a>
+                    <a onclick="backtologin()" style="color:#FFFFFF">Cerrar Sesion</a>
                 </li>
             </ul>
         </div>
