--- a/CARW/templates/main/Ajustes.html
+++ b/CARW/templates/main/Ajustes.html
@@ -5,6 +5,12 @@
 <div id="alerta2" class="alerta-EXoFL oculto">
     Guardado Exitoso!
 </div>
+<div id="alerta3" class="alerta-EXoFL oculto">
+    Correo electrónico inválido!
+</div>
+<div id="alerta4" class="alerta-EXoFL oculto">
+    Matricula invalida solo usar mayusculas!
+</div>
 <div class="ajustes-box">
     <div class="sombreado" id="ajustes-botones">
         <button type="button" class="btn btn-primary" onclick="mostrarmenuUS()">Usuarios</button>
@@ -62,7 +68,7 @@
         <input id="Rpassword" type="password" placeholder="" style="position: relative; left: 55px;">
         <br></br>
         <label for="Rmatricula2">Matricula:</label>
-        <input id="Rmatricula2" type="text" placeholder="" style="position: relative; left: 65px;">
+        <input id="Rmatricula2" type="text" placeholder="SOLO MAYUSCULAS" style="position: relative; left: 65px;">
         <br></br>
         <label id="Rrol" for="Rrol">Rol:</label>
         <select id="rolSelect" style="position: relative; left: 105px;">
