--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -20,7 +20,7 @@
             <label for="contraseña">Contraseña</label>
             <input id="contraseña" type="password" placeholder="coloque su contraseña">
             <br>
-            <button class="btn btn-info" type="submit" onclick="ingresar3()">Ingresar</button><br><br>
+            <button class="btn btn-info" type="submit" onclick="ingresar()">Ingresar</button><br><br>
         </form>
     </div>
 
