--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -34,7 +34,8 @@
     <script src="{{url_for('static', filename='js/boostrap_js/bootstrap.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/boostrap_js/bootstrap.bundle.min.js')}}"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </body>
 
 </html>
