problema de sseion ssolucionado

--- a/CARW/templates/main/login.html
+++ b/CARW/templates/main/login.html
@@ -25,7 +25,7 @@
                 <i class="fa-solid fa-eye-slash"></i><label style="display: inline; position: relative; left: 5px;">Mostrar Contraseña</label>
             </span>
             <br><br>
-            <button class="btn btn-info" type="submit" onclick="ingresar()">Ingresar</button><br><br>
+            <button class="btn btn-info" type="submit" onclick="ingresar(event)">Ingresar</button><br><br>
             <a href="/Recovery">Olvidaste Tu Contraseña?</a>
         </form>
     </div>
