--- a/CARW/templates/main/Recovery.html
+++ b/CARW/templates/main/Recovery.html
@@ -21,7 +21,7 @@
             <label for="#cel">Numero Regisstrado</label>
             <input id="#cel" type="text" placeholder="coloque su # de telefono">
             <br>
-            <button class="btn btn-info" type="submit" onclick="RecoveryCT()">Recuperar</button><br><br>
+            <button class="btn btn-info" type="submit" onclick="RecoveryCT(event)">Recuperar</button><br><br>
             <a href="/">Regresar a Login</a>
         </form>
     </div>
